<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.MainActivityTinh">
    <TextView
        style="@style/title"
        android:text="@string/tinh"/>

    <LinearLayout
        style="@style/linearBt"
        >

        <TextView
            style="@style/textView"
            android:text="@string/maTinh" />

        <EditText
            android:id="@+id/edit_maTinh"
            style="@style/editText" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
        >

        <TextView
            style="@style/textView"
            android:text="@string/tenTinh" />
        <EditText
            android:id="@+id/edit_tenTinh"
            style="@style/editText" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/bt_add"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_add_circle_24"
            android:text="@string/add" />

        <Button
            android:id="@+id/bt_remove"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_remove_circle_24"
            android:text="@string/remove" />

        <Button
            android:id="@+id/bt_update"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_update_24"
            android:text="@string/update" />

        <Button
            android:id="@+id/bt_clear"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_clear_all_24"
            android:text="@string/clear" />

    </LinearLayout>

    <ListView
        android:id="@+id/listTinh"
        style="@style/listView"
        android:layout_marginTop="5dp" />
</LinearLayout>
