<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.MainActivityXe">

    <TextView
        style="@style/title"
        android:text="@string/xeTai"/>

    <LinearLayout
        style="@style/linearBt"
       >

        <TextView
            style="@style/textView"
            android:text="@string/maXe" />

        <EditText
            android:id="@+id/edit_maXe"
            style="@style/editText" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
       >

        <TextView
            style="@style/textView"
            android:text="@string/tenXe" />

        <EditText
            android:id="@+id/edit_tenXe"
            style="@style/editText" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
       >

        <TextView
            style="@style/textView"
            android:text="@string/sxXe" />

        <EditText
            android:id="@+id/edit_sxXe"
            style="@style/editText"
            android:inputType="number"/>

    </LinearLayout>
    <LinearLayout
        style="@style/linearBt"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/textView"
            android:text="Chọn Tài Xe" />

        <Spinner
            android:id="@+id/spnr_maTX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"></Spinner>

    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/bt_add"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_add_circle_24"
            android:text="@string/add" />

        <Button
            android:id="@+id/bt_remove"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_remove_circle_24"
            android:text="@string/remove" />

        <Button
            android:id="@+id/bt_update"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_update_24"
            android:text="@string/update" />

        <Button
            android:id="@+id/bt_clear"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_clear_all_24"
            android:text="@string/clear" />

    </LinearLayout>

    <ListView
        android:id="@+id/listDevice"
        style="@style/listView"
        android:layout_marginTop="5dp" />

</LinearLayout>