<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.MainActivityTuyen">
    <TextView
        style="@style/title"
        android:text="Quản lý Tuyến"/>

    <LinearLayout
        style="@style/linearBt"
        >

        <TextView
            style="@style/textView"
            android:text="Mã Tuyến" />

        <EditText
            android:id="@+id/edit_maTuyen"
            style="@style/editText" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
        >

        <TextView
            style="@style/textView"
            android:text="Tên Tuyến" />
        <EditText
            android:id="@+id/edit_tenTuyen"
            style="@style/editText" />

    </LinearLayout>
    <LinearLayout
        style="@style/linearBt"
        >

        <TextView
            style="@style/textView"
            android:text="Giá Tuyến" />
        <EditText
            android:id="@+id/edit_giaTuyen"
            style="@style/editText"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/bt_add"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_add_circle_24"
            android:text="@string/add" />

        <Button
            android:id="@+id/bt_remove"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_remove_circle_24"
            android:text="@string/remove" />

        <Button
            android:id="@+id/bt_update"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_update_24"
            android:text="@string/update" />

        <Button
            android:id="@+id/bt_clear"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_clear_all_24"
            android:text="@string/clear" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        style="@style/listView"
        android:layout_marginTop="5dp" />
</LinearLayout>

