<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.MainActivityPhanCong">

    <TextView
        style="@style/title"
        android:text="Quản lý phân công"/>

    <LinearLayout
        style="@style/linearBt"
        >

        <TextView
            style="@style/textView"
            android:text="Số phiếu"
            />

        <EditText
            android:id="@+id/edit_soPhieu"
            style="@style/editText"
            android:enabled="false"/>

    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
        >

        <TextView
            style="@style/textView"
            android:text="Ngày Xuất Phiếu " />

        <EditText
            android:id="@+id/edit_ngayXP"
            style="@style/editText"
            android:ems="10"
            android:hint="DD/MM/YYYY"
            android:inputType="date"/>
    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/textView"
            android:text="Tên Xe" />

        <Spinner
            android:id="@+id/spnr_maXe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"></Spinner>

    </LinearLayout>
    <LinearLayout
        style="@style/linearBt"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/textView"
            android:text="Xuất Phát" />

        <Spinner
            android:id="@+id/spnr_maTinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"></Spinner>

    </LinearLayout>
    <LinearLayout
        style="@style/linearBt"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/textView"
            android:text="Tên Tuyến"/>

        <Spinner
            android:id="@+id/spnr_maTuyen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"></Spinner>

    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/bt_add"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_add_circle_24"
            android:text="@string/add" />

        <Button
            android:id="@+id/bt_remove"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_remove_circle_24"
            android:text="@string/remove" />

        <Button
            android:id="@+id/bt_update"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_update_24"
            android:text="@string/update" />

        <Button
            android:id="@+id/bt_clear"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_clear_all_24"
            android:text="@string/clear" />

    </LinearLayout>

    <ListView
        android:id="@+id/listDevice"
        style="@style/listView"
        android:layout_marginTop="5dp" />

</LinearLayout>